--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ep_set_title_on_pad",
   "description": "Set the title on a pad in Etherpad, also includes real time updates to the UI",
   "version": "0.5.14",
+  "license": "Apache-2.0",
   "author": "johnyma22 (John McLear) <john@mclear.co.uk>",
   "dependencies": {},
   "engines": {
