--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "engines": {
     "node": ">= 10.0.1"
   },
+  "homepage": "https://github.com/ether/ep_set_title_on_pad#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/JohnMcLear/ep_set_title_on_pad.git"
+    "url": "https://github.com/ether/ep_set_title_on_pad.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ether/ep_set_title_on_pad/issues"
   },
   "funding": {
     "type": "individual",
-    "url": "http://etherpad.org/"
+    "url": "https://etherpad.org/"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
