--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "dependencies": {},
   "engines": {
-    "node": ">= 10.0.1"
+    "node": ">=12.13.0"
   },
   "homepage": "https://github.com/ether/ep_set_title_on_pad#readme",
   "repository": {
@@ -26,14 +26,15 @@
     "url": "https://etherpad.org/"
   },
   "devDependencies": {
-    "eslint": "^7.18.0",
-    "eslint-config-etherpad": "^1.0.24",
+    "eslint": "^7.32.0",
+    "eslint-config-etherpad": "^2.0.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.10.0"
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
+    "eslint-plugin-cypress": "^2.12.1"
   },
   "eslintConfig": {
     "root": true,
